<resources>
    <string name="app_name">personalia.id</string>
    <string name="url">Pengaturan</string>
    <string name="url_reg">Daftar Sekarang</string>
    <string name="url_desc">Belum Memiliki Akun?</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Log in</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_setting">Pengaturan</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Kata Sandi</string>
    <string name="action_sign_in">Masuk</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="register">Daftar sekarang</string>

    <!-- Menu -->
    <string name="dashboard">Dasbor</string>
    <string name="travel">Dinas Luar</string>
    <string name="claim">Klaim</string>
    <string name="attendance">Izin</string>
    <string name="overtime">Lembur</string>
    <string name="report">Kehadiran</string>
    <string name="help">Bantuan</string>
    <string name="settings">Pengaturan</string>
    <string name="logout">Keluar</string>
    <!-- Etc Dashboard -->
    <string name="clock_in">Clock In</string>
    <string name="project">Tugas</string>
    <string name="calendar_work">Kalender</string>

    <string name="new_travel">Dinas Luar Baru</string>
    <string name="new_claim">Klaim Baru</string>
    <string name="new_attendance">Izin Baru</string>
    <string name="new_overtime">Lembur Baru</string>
    <string name="new_report">Kehadiran Baru</string>

    <string name="search_travel">Pencarian Dinas Luar</string>
    <string name="search_claim">Pencarian Klaim</string>
    <string name="search_attendance">Pencarian Izin</string>
    <string name="search_overtime">Pencarian Lembur</string>
    <string name="search_report">Pencarian Kehadiran</string>

    <string name="detail_travel">Rincian Dinas Luar</string>
    <string name="detail_claim">Rincian Klaim</string>
    <string name="detail_attendance">Rincian Izin</string>
    <string name="detail_overtime">Rincian Lembur</string>
    <string name="detail_report">Rincian Kehadiran</string>

    <!-- Setting -->
    <string name="setting_text1">Url Portal</string>
    <string name="setting_text2">Url Pms</string>
    <string name="setting_hinttext">https://personalia.id/</string>
    <string name="save">Simpan</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="normal">Normal</string>
    <string name="hybrid">Hybrid</string>
    <string name="satellite">Satellite</string>
    <string name="terrain">Terrain</string>
    <string-array name="layers_array">
        <item>@string/normal</item>
        <item>@string/hybrid</item>
        <item>@string/satellite</item>
        <item>@string/terrain</item>
    </string-array>
</resources>
