<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single" android:id="@+id/navigation">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/dashboard"
            android:iconTint="#ffffff" />
        <item
            android:id="@+id/nav_travel"
            android:icon="@drawable/ic_travel"
            android:title="@string/travel" />
        <item
            android:id="@+id/nav_claim"
            android:icon="@drawable/ic_claim"
            android:title="@string/claim" />
        <item
            android:id="@+id/nav_attendance"
            android:icon="@drawable/ic_attendance"
            android:title="@string/attendance" />
        <item
            android:id="@+id/nav_overtime"
            android:icon="@drawable/ic_overtime"
            android:title="@string/overtime" />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_report"
            android:title="@string/report" />
    </group>

    <group android:checkableBehavior="none" android:id="@+id/general">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help"
            android:title="@string/help" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_shutdown"
            android:title="@string/logout" />
    </group>
</menu>
